--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/menuLogin"
-        android:title="Login"
+        android:title="Profile"
         android:orderInCategory="100" />
 
     <item
