--- a/app/src/main/res/layout/activity_dbact.xml
+++ b/app/src/main/res/layout/activity_dbact.xml
@@ -78,6 +78,31 @@
                 android:layout_weight="1" />
 
             <Button
+                android:id="@+id/btn2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="showbtn2"
+                android:text="Go Back" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="10"
+            android:orientation="horizontal">
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <Button
                 android:id="@+id/btn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
