--- a/app/src/main/res/layout/activity_loginok.xml
+++ b/app/src/main/res/layout/activity_loginok.xml
@@ -30,7 +30,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="User Information:"
-            android:textSize="30sp"
+            android:textSize="34sp"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
         <Space
@@ -43,6 +44,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="name:"
+            android:textColor="@color/black"
             android:autoSizeTextType="uniform"
             android:textStyle="bold" />
 
@@ -50,6 +52,7 @@
             android:id="@+id/tVnameview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:textColor="@color/black"
             android:layout_weight="1" />
 
         <Space
@@ -62,6 +65,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="e-mail:"
+            android:textColor="@color/black"
             android:autoSizeTextType="uniform"
             android:textStyle="bold" />
 
@@ -70,6 +74,7 @@
             android:id="@+id/tVemailview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:textColor="@color/black"
             android:layout_weight="1" />
 
         <Space
@@ -82,6 +87,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="phone:"
+            android:textColor="@color/black"
             android:autoSizeTextType="uniform"
             android:textStyle="bold" />
 
@@ -90,6 +96,7 @@
             android:id="@+id/tVphoneview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:textColor="@color/black"
             android:layout_weight="1" />
 
         <Space
@@ -102,12 +109,14 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="type:"
+            android:textColor="@color/black"
             android:autoSizeTextType="uniform"
             android:textStyle="bold" />
 
 
         <TextView
             android:id="@+id/tVtypeview"
+            android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
@@ -122,6 +131,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="Uid:"
+            android:textColor="@color/black"
             android:autoSizeTextType="uniform"
             android:textStyle="bold" />
 
@@ -129,6 +139,7 @@
             android:id="@+id/tVuidview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:textColor="@color/black"
             android:layout_weight="1" />
 
         <Space
@@ -140,6 +151,7 @@
             android:id="@+id/cBconnectview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:text="Stay Connected" />
 
