--- a/app/src/main/res/layout/activity_main_chats.xml
+++ b/app/src/main/res/layout/activity_main_chats.xml
@@ -30,6 +30,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textStyle="bold"
+            android:textColor="@color/black"
             android:gravity="center"
             android:textSize="30dp"
             />
