--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -10,7 +10,7 @@
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.1" />
+        android:layout_weight="0.11" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,6 +28,14 @@
             android:textSize="18sp"
             android:layout_marginStart="10dp"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/exitbtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="180dp"
+            android:background="@drawable/exiticon"
+            />
 
     </LinearLayout>
 
