--- a/app/src/main/res/layout/activity_dbact.xml
+++ b/app/src/main/res/layout/activity_dbact.xml
@@ -82,6 +82,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:textColor="@color/white"
+                android:backgroundTint="#FF6D00"
                 android:onClick="showbtn2"
                 android:text="Go Back" />
 
@@ -104,10 +106,12 @@
 
             <Button
                 android:id="@+id/btn"
+                android:backgroundTint="#FF6D00"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="showbtn"
+                android:textColor="@color/white"
                 android:text="Show Data" />
 
             <Space
