--- a/app/src/main/res/layout/activity_loginok.xml
+++ b/app/src/main/res/layout/activity_loginok.xml
@@ -176,6 +176,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="5"
                 android:onClick="update"
+                android:backgroundTint="#FF6D00"
                 android:text="Update Data" />
 
             <Space
