--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -40,12 +40,13 @@
         </LinearLayout>
 
         <Button
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Chatbtn"
             android:text="Open Chat"
             android:textSize="14sp"
-            android:backgroundTint="#25d366"
+            android:backgroundTint="#FF6D00"
             />
 
     </LinearLayout>
