--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,19 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_gravity="center"
+            android:layout_height="0dp"
+            android:layout_weight="2.5"
+            android:background="@drawable/icon"
+            />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:textColor="#163A52"
             android:gravity="center"
             android:id="@+id/tVte"
             android:text="Welcome To DriveUp"
@@ -46,6 +55,7 @@
             android:gravity="center"
             android:id="@+id/tVtitle"
             android:text="Login"
+            android:textColor="#FF6D00"
             android:textSize="25dp"
             android:textStyle="bold" />
 
@@ -61,6 +71,7 @@
             android:layout_weight="1"
             android:visibility="invisible"
             android:ems="10"
+            android:textColor="@color/black"
             android:hint="name"
             android:inputType="textPersonName" />
 
@@ -75,6 +86,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:ems="10"
+            android:textColor="@color/black"
             android:hint="e-mail"
             android:inputType="textEmailAddress" />
 
@@ -89,6 +101,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:ems="10"
+            android:textColor="@color/black"
             android:hint="password"
             android:inputType="textPassword" />
 
@@ -103,6 +116,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:visibility="invisible"
+            android:textColor="@color/black"
             android:ems="10"
             android:hint="phone"
             android:inputType="phone" />
@@ -117,6 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:textColor="@color/black"
             android:visibility="invisible"
             android:text="Are you a Teacher"
            />
@@ -131,6 +146,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:textColor="@color/black"
             android:text="Stay Connected" />
 
         <Space
@@ -166,6 +182,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="5"
                 android:onClick="logorreg"
+                android:textColor="@color/white"
+                android:backgroundTint="#FF6D00"
                 android:text="Login" />
 
             <Space
