--- a/app/src/main/res/layout/activity_main_chats.xml
+++ b/app/src/main/res/layout/activity_main_chats.xml
@@ -31,7 +31,7 @@
             android:layout_weight="1"
             android:textStyle="bold"
             android:text="Hello [Username]!"
-            android:textColor="@color/black"
+            android:textColor="#163A52"
             android:gravity="center"
             android:textSize="30dp"
             />
@@ -70,8 +70,10 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="5"
+                android:textColor="@color/white"
                 android:visibility="invisible"
                 android:onClick="TeacherList"
+                android:backgroundTint="#FF6D00"
                 android:text="View Teachers"
                 />
 
