--- a/app/src/main/res/layout/activity_teacher_list.xml
+++ b/app/src/main/res/layout/activity_teacher_list.xml
@@ -49,10 +49,12 @@
 
             <Button
                 android:id="@+id/btn"
+                android:backgroundTint="#FF6D00"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="5"
                 android:onClick="MainChats"
+                android:textColor="@color/white"
                 android:text="Go Back"
                 />
 
