--- a/app/src/main/res/layout/activity_loginok.xml
+++ b/app/src/main/res/layout/activity_loginok.xml
@@ -29,7 +29,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="User Information:"
+            android:text="Your Information:"
             android:textSize="34sp"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -177,7 +177,7 @@
                 android:layout_weight="5"
                 android:onClick="update"
                 android:backgroundTint="#FF6D00"
-                android:text="Update Data" />
+                android:text="Home Screen" />
 
             <Space
                 android:layout_width="0dp"
