--- a/app/src/main/res/layout/activity_main_chats.xml
+++ b/app/src/main/res/layout/activity_main_chats.xml
@@ -30,16 +30,23 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:text="Hello [Username]!"
             android:textColor="#163A52"
             android:gravity="center"
             android:textSize="30dp"
             />
 
-        <Space
+        <TextView
+            android:id="@+id/tVactive"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.5" />
+            android:layout_weight="0.5"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"
+            android:text="Active chats:"
+            android:textColor="#163A52"
+            android:gravity="bottom"
+            android:textSize="20dp"
+            />
 
         <ListView
             android:id="@+id/lv"
@@ -68,7 +75,7 @@
             <Button
                 android:id="@+id/btn"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="50dp"
                 android:layout_weight="5"
                 android:textColor="@color/white"
                 android:visibility="invisible"
