--- a/app/src/main/res/layout/activity_teacher_list.xml
+++ b/app/src/main/res/layout/activity_teacher_list.xml
@@ -51,7 +51,7 @@
                 android:id="@+id/btn"
                 android:backgroundTint="#FF6D00"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="50dp"
                 android:layout_weight="5"
                 android:onClick="MainChats"
                 android:textColor="@color/white"
