--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -15,13 +15,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#FF6D00"
+        android:background="#080092"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="280dp"
             android:layout_height="60dp"
-            android:background="#FF6D00"
+            android:background="#080092"
             android:gravity="center_vertical"
             android:paddingHorizontal="16dp">
 
@@ -40,7 +40,7 @@
         <LinearLayout
             android:layout_width="80dp"
             android:layout_height="60dp"
-            android:background="#FF6D00"
+            android:background="#080092"
             android:layout_marginHorizontal="52dp"
             android:gravity="center_vertical"
             android:paddingHorizontal="16dp"
