--- a/app/src/main/res/layout/activity_teacher_list.xml
+++ b/app/src/main/res/layout/activity_teacher_list.xml
@@ -49,7 +49,7 @@
 
             <Button
                 android:id="@+id/btn"
-                android:backgroundTint="#FF6D00"
+                android:backgroundTint="#080092"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="5"
