--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,9 @@
         android:title="Profile"
         android:orderInCategory="100" />
 
+    <item
+        android:id="@+id/alarms"
+        android:title="Alarms"
+        android:orderInCategory="200" />
+
 </menu>
