--- a/app/src/main/res/layout/activity_alarm_manager.xml
+++ b/app/src/main/res/layout/activity_alarm_manager.xml
@@ -22,26 +22,34 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="15" />
+            android:layout_weight="10" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="35dp"
             android:textColor="#163A52"
-            android:text="Your Alarms" />
+            android:text="Set Alarms" />
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="5" />
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:hint="Set Alarm's Time" />
+        <DatePicker
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:id="@+id/datePicker"
+            android:datePickerMode="spinner"
+            android:calendarViewShown="false"
+            />
+
+        <TimePicker
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:id="@+id/timePicker"
+            android:timePickerMode="spinner"
+            />
 
         <Space
             android:layout_width="match_parent"
@@ -79,7 +87,7 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="60" />
+            android:layout_weight="0" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -94,7 +102,7 @@
 
             <Button
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:onClick="update"
                 android:textSize="20dp"
