--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -10,7 +10,7 @@
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.11" />
+        android:layout_weight="0.12" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,6 +49,7 @@
                 android:id="@+id/exitbtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:backgroundTint="@null"
                 android:background="@drawable/exiticon"
                 />
         </LinearLayout>
@@ -86,6 +87,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginStart="8dp"
+            android:backgroundTint="@null"
             android:background="@drawable/sendicon"
             />
     </LinearLayout>
