--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,21 @@
 
     <style
         name="Base.Theme.FireBase2"
-        parent="Theme.Material3.DayNight.NoActionBar">
-
+        parent="Theme.Material3.DayNight">
+        <item name="actionBarStyle">@style/Widget.FireBase2.ActionBar</item>
     </style>
 
     <style
         name="Theme.FireBase2"
-        parent="Base.Theme.FireBase2"
-        />
+        parent="Base.Theme.FireBase2" />
+
+    <style name="Widget.FireBase2.ActionBar" parent="Widget.AppCompat.ActionBar.Solid">
+        <item name="background">@android:color/black</item>
+        <item name="titleTextStyle">@style/TextAppearance.FireBase2.ActionBarTitle</item>
+    </style>
+
+    <style name="TextAppearance.FireBase2.ActionBarTitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 
 </resources>
