--- a/app/src/main/res/layout/activity_alarm_manager.xml
+++ b/app/src/main/res/layout/activity_alarm_manager.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:background="@drawable/download3"
     tools:context=".AlarmManagerActivity">
 
     <Space
@@ -28,7 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="35dp"
-            android:textColor="#163A52"
+            android:textStyle="bold"
+            android:textColor="@color/black"
             android:text="Set Alarms" />
 
         <Space
@@ -85,10 +87,10 @@
                 android:id="@+id/Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="25dp"
+                android:textSize="24dp"
                 android:text="Set Alarm"
                 android:textColor="@android:color/white"
-                android:backgroundTint="#080092"
+                android:backgroundTint="@color/black"
                 />
 
             <Space
@@ -121,7 +123,7 @@
                 android:onClick="update"
                 android:textSize="20dp"
                 android:textColor="@color/white"
-                android:backgroundTint="#080092"
+                android:backgroundTint="@color/black"
                 android:text="Home Screen" />
 
             <Space
