--- a/app/src/main/res/layout/activity_loginok.xml
+++ b/app/src/main/res/layout/activity_loginok.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/download3"
     android:orientation="horizontal"
     tools:context=".Loginok">
 
@@ -22,7 +23,7 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1.2" />
 
         <TextView
             android:layout_width="match_parent"
@@ -37,23 +38,22 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="0.5" />
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:text="Name:"
             android:textColor="@color/black"
-            android:autoSizeTextType="uniform"
+            android:textSize="30dp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tVnameview"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:layout_weight="1" />
+            android:textSize="20dp" />
 
         <Space
             android:layout_width="match_parent"
@@ -62,20 +62,19 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:text="E-mail:"
             android:textColor="@color/black"
-            android:autoSizeTextType="uniform"
+            android:textSize="30dp"
             android:textStyle="bold" />
 
 
         <TextView
             android:id="@+id/tVemailview"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:textColor="@color/black"
-            android:layout_weight="1" />
+            android:textSize="20dp"
+            android:layout_height="wrap_content"            android:textColor="@color/black"
+            />
 
         <Space
             android:layout_width="match_parent"
@@ -84,20 +83,19 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:text="Phone:"
             android:textColor="@color/black"
-            android:autoSizeTextType="uniform"
+            android:textSize="30dp"
             android:textStyle="bold" />
 
 
         <TextView
             android:id="@+id/tVphoneview"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
             android:textColor="@color/black"
-            android:layout_weight="1" />
+            android:textSize="20dp"
+            android:layout_height="wrap_content"            />
 
         <Space
             android:layout_width="match_parent"
@@ -106,11 +104,10 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:text="Type:"
+            android:textSize="30dp"
             android:textColor="@color/black"
-            android:autoSizeTextType="uniform"
             android:textStyle="bold" />
 
 
@@ -118,13 +115,14 @@
             android:id="@+id/tVtypeview"
             android:textColor="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:textSize="20dp"
+            android:layout_height="wrap_content"
+            />
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.5" />
+            android:layout_weight="0.2" />
 
         <CheckBox
             android:id="@+id/cBconnectview"
@@ -132,6 +130,8 @@
             android:layout_height="0dp"
             android:textColor="@color/black"
             android:layout_weight="1"
+            android:textSize="17dp"
+            android:textStyle="bold"
             android:text="Stay Connected" />
 
         <Space
@@ -155,8 +155,10 @@
                 android:layout_height="match_parent"
                 android:layout_weight="5"
                 android:onClick="update"
+                android:textSize="18dp"
+                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:backgroundTint="#080092"
+                android:backgroundTint="@color/black"
                 android:text="Home Screen" />
 
             <Space
