--- a/app/src/main/res/layout/activity_alarm_manager.xml
+++ b/app/src/main/res/layout/activity_alarm_manager.xml
@@ -47,7 +47,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginStart="30dp"
             android:hint="Alarm's Purpose"
-            android:textColor="#163A52"
+            android:textColor="@color/black"
             android:gravity="bottom"
             android:textSize="20dp"
             />
